using transcribe_audio.py now

--- a/trans process.ipynb
+++ b/trans process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -72,28 +72,28 @@
       "Caller chat: \n",
       "Hello? This is the Wachovia Bank. It's 1302 West International Speedway Boulevard. \n",
       "\n",
-      "911 call chat: \n",
+      "911 call chat:\n",
       "Okay. We're being robbed. \n",
       "\n",
-      "Caller chat: \n",
+      "Caller chat:\n",
       "He's saying he has a bomb. He's saying he has a taser. \n",
       "\n",
-      "911 operator chat: \n",
+      "911 operator chat:\n",
       "Okay. Where are you at in the bank? \n",
       "\n",
-      "Caller chat: \n",
+      "Caller chat:\n",
       "White male, black male? \n",
       "\n",
-      "911 operator chat: \n",
+      "911 operator chat:\n",
       "White male, black male. \n",
       "\n",
-      "Caller chat: \n",
+      "Caller chat:\n",
       "White male. \n",
       "\n",
-      "911 operator chat: \n",
-      "Okay. What is he wearing? \n",
+      "911 operator chat:\n",
+      "Okay. \n",
       "\n",
-      "Caller chat: \n",
+      "Caller chat:\n",
       "Black beanie, black hat.\n"
      ]
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -136,23 +136,18 @@
      "text": [
       "Here is the extracted information from the transcript:\n",
       "\n",
-      "**Caller Chat:**\n",
-      "Hello? This is the Wachovia Bank. It's 1302 West International Speedway Boulevard.\n",
+      "**Caller chat:**\n",
+      "* I'm at Wachovia Bank, located at 1302 West International Speedway Boulevard.\n",
+      "* We are being robbed.\n",
       "\n",
-      "**911 Call Chat:**\n",
-      "We're being robbed.\n",
+      "**911 call chat:**\n",
+      "* The suspect has a bomb.\n",
+      "* The suspect also has a taser.\n",
+      "* Description of suspects:\n",
+      "\t+ Suspect 1: White male\n",
+      "\t+ Suspect 2: Black male (later confirmed as wearing black beanie and black hat)\n",
       "\n",
-      "**Caller Chat:**\n",
-      "Where are you at in the bank?\n",
-      "\n",
-      "**911 Operator Chat:**\n",
-      "He's saying he has a bomb. He's saying he has a taser.\n",
-      "\n",
-      "**Caller Chat:**\n",
-      "White male, black male? White male, black male. White male. White male.\n",
-      "\n",
-      "**911 Operator Chat:**\n",
-      "Black beanie, black hat.\n"
+      "Let me know if you'd like me to add anything else!\n"
      ]
     }
    ],
