chat extraction added

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -21,10 +21,10 @@
     "        You are given 911 call transcript and you need to extract the information from the transcript.\n",
     "        You need to table the information in a structured format in the form of a chatbot.\n",
     "        The information should be presented in following format:\n",
-    "        Caller chat: \n",
-    "        911 call chat:\n",
-    "        Caller chat:\n",
-    "        911 operator chat:\n",
+    "        Person 1 chat: \n",
+    "        Person 2 chat:\n",
+    "        Person 1 chat:\n",
+    "        Person 2 chat:\n",
     "        ...\n",
     "        \n",
     "        \"\"\"),\n",
@@ -108,51 +108,6 @@
     "print(result)\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain_ollama.llms import OllamaLLM\n",
-    "\n",
-    "llm = OllamaLLM(model=\"llama3.1\")\n",
-    "\n",
-    "chain = PROMPT | llm | outputparser\n",
-    "\n",
-    "result = chain.invoke(transcription)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Here is the extracted information from the transcript:\n",
-      "\n",
-      "**Caller chat:**\n",
-      "* I'm at Wachovia Bank, located at 1302 West International Speedway Boulevard.\n",
-      "* We are being robbed.\n",
-      "\n",
-      "**911 call chat:**\n",
-      "* The suspect has a bomb.\n",
-      "* The suspect also has a taser.\n",
-      "* Description of suspects:\n",
-      "\t+ Suspect 1: White male\n",
-      "\t+ Suspect 2: Black male (later confirmed as wearing black beanie and black hat)\n",
-      "\n",
-      "Let me know if you'd like me to add anything else!\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(result)\n"
    ]
   },
   {
